--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width">
   <title>Class Link Sharing</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="sidebar.css">
+  <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
   <header>
@@ -12,7 +14,6 @@
   </header>
   <div class="container">
     <content>
-
       <h2>Day 3</h2>
       <ul>
         <li>
