--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li>
           <a href="https://www.rapidtables.com/web/css/css-color.html">CSS Color Constants</a>
         </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1GZ2wIzB582cDeG-m8yjGXk8Jw9-eBDiEjJd_A14d6zg/export?format=pdf" target="_blank">WORKSHOP</a>
+        </li>
       </ul>
     </content>
 
@@ -40,6 +43,9 @@
       </li>
       <li>
         <a href="https://nycda.instructure.com">Canvas</a>
+      </li>
+      <li>
+        <a href="https://github.com/fizal619/yearup" target="_blank">The code for this portal</a>
       </li>
     </ul>
   </div>
