update the links

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width">
   <title>Class Link Sharing</title>
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="sidebar.css">
-  <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
   <header>
@@ -14,7 +12,7 @@
   </header>
   <div class="container">
     <content>
-      <h2>Day 3</h2>
+      <h2>Day 3 🎨</h2>
       <ul>
         <li>
           <a href="https://css-tricks.com/css-style-guides/" target="_blank">CSS Style Guides</a>
@@ -23,10 +21,22 @@
           <a href="https://css-tricks.com/almanac/properties/b/background/" target="_blank">CSS Backgrounds</a>
         </li>
         <li>
-          <a href="https://www.rapidtables.com/web/css/css-color.html">CSS Color Constants</a>
+          <a href="https://www.rapidtables.com/web/css/css-color.html" target="_blank">CSS Color Constants</a>
         </li>
         <li>
-          <a href="https://docs.google.com/document/d/1GZ2wIzB582cDeG-m8yjGXk8Jw9-eBDiEjJd_A14d6zg/export?format=pdf" target="_blank">WORKSHOP</a>
+          <a href="https://docs.google.com/document/d/1GZ2wIzB582cDeG-m8yjGXk8Jw9-eBDiEjJd_A14d6zg/export?format=pdf">WORKSHOP 📄</a>
+        </li>
+        <li>
+          <a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">CSS Transitions</a>
+        </li>
+        <li>
+          <a href="https://css-tricks.com/snippets/css/keyframe-animation-syntax/" target="_blank">Keyframes Reference</a>
+        </li>
+        <li>
+          <a href="https://css-tricks.com/snippets/html/responsive-meta-tag/">Responsive Meta Tag</a>
+        </li>
+        <li>
+          <a href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp" target="_blank">Media Queries</a>
         </li>
       </ul>
     </content>
@@ -34,20 +44,11 @@
   </div>
   <div class="sidebar">
     <h3>Other Useful Links:</h3>
-    <ul>
-      <li>
-        <a href="http://w3schools.com" target="_blank">W3 Schools</a>
-      </li>
-      <li>
-        <a href="https://css-tricks.com" target="_blank">CSS Tricks</a>
-      </li>
-      <li>
-        <a href="https://nycda.instructure.com">Canvas</a>
-      </li>
-      <li>
-        <a href="https://github.com/fizal619/yearup" target="_blank">The code for this portal</a>
-      </li>
-    </ul>
+    <br>
+    <a href="http://w3schools.com" target="_blank">W3 Schools</a> |
+    <a href="https://css-tricks.com" target="_blank">CSS Tricks</a> |
+    <a href="https://nycda.instructure.com"  target="_blank">Canvas</a> |
+    <a href="https://github.com/fizal619/yearup" target="_blank">Class Github</a>
   </div>
 </body>
 </html>
