--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
           <a href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp" target="_blank">Media Queries</a>
         </li>
       </ul>
+      <h3>Day 4 🏓</h3>
+      <ul>
+        <li>
+          <a href="https://repl.it/@fizal619/MorningExerciseDay4">MORNING EXERCISE</a>
+        </li>
+      </ul>
     </content>
 
   </div>
