--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
       <h2>Day 4 🏓</h2>
       <ul>
         <li>
-          <a href="https://repl.it/@fizal619/MorningExerciseDay4">MORNING EXERCISE</a>
+          <a href="https://repl.it/@fizal619/MorningExerciseDay4" target="_blank">MORNING EXERCISE</a>
+        </li>
+        <li>
+          <a href="https://lingscars.com" target="_blank">Ling's Cars</a>
         </li>
       </ul>
     </content>
