--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <li>
           <a href="https://lingscars.com" target="_blank">Ling's Cars</a>
         </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1w7WqmEwWE82CwgzCxufgvB2UeHvc1VdX5cK5ZHNWBrY/edit?usp=sharing">WORKSHOP</a>
+
+        </li>
       </ul>
     </content>
 
