add workshop solution

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         </li>
         <li>
           <a href="https://docs.google.com/document/d/1w7WqmEwWE82CwgzCxufgvB2UeHvc1VdX5cK5ZHNWBrY/edit?usp=sharing">WORKSHOP</a>
-
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1skrssxn70cHZYcjir2qT4TUHxaEvW6I4e00KfiazYrs/edit?usp=sharing" target="_blank">WORKSHOP SOLUTION</a>
         </li>
       </ul>
     </content>
