--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <a href="https://docs.google.com/document/d/1GZ2wIzB582cDeG-m8yjGXk8Jw9-eBDiEjJd_A14d6zg/export?format=pdf">WORKSHOP 📄</a>
         </li>
         <li>
+          <a href="/day3workshop/">WORKSHOP SOLUTION ❗</a>
+        </li>
+        <li>
           <a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">CSS Transitions</a>
         </li>
         <li>
