--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <li>
           <a href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp" target="_blank">Media Queries</a>
         </li>
+        <li>
+          <a href="https://blog.gyrosco.pe/" target="_blank">Gyrosco.pe Engineering Blog</a>
+        </li>
       </ul>
       <br>
       <h2>Day 4 🏓</h2>
