update the links

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
           <a href="https://docs.google.com/document/d/1skrssxn70cHZYcjir2qT4TUHxaEvW6I4e00KfiazYrs/edit?usp=sharing" target="_blank">WORKSHOP SOLUTION</a>
         </li>
       </ul>
+      <br>
+      <h2>Day 5</h2>
+      <li>
+        <a href="https://repl.it/@fizal619/MorningExerciseDay5" target="_blank">MORNING EXERCISE</a>
+      </li>
     </content>
 
   </div>
