--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
       <li>
         <a href="https://repl.it/@fizal619/MorningExerciseDay5" target="_blank">MORNING EXERCISE</a>
       </li>
+
+      <h2>Day 6</h2>
+      <li>
+        <a href="https://docs.google.com/document/d/11weW9UrGU_MlAA7pSiyHmBNOz_VcDl78HyG1tpRJq_E/edit?usp=sharing" target="_blank">
+          Workshop
+        </a>
+      </li>
     </content>
 
   </div>
