workshop day 6 pt 2

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           Workshop
         </a>
       </li>
+      <li>
+        <a href="https://docs.google.com/document/d/1W5l2hnyZ8CGXwIAh5BccsJ80SjvosW3G3cYNcoT-v-s/edit?usp=sharing" target="_blank">
+          Workshop the Sequel
+        </a>
+      </li>
     </content>
 
   </div>
