add day 6 links

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <li>
         <a href="https://repl.it/@fizal619/MorningExerciseDay5" target="_blank">MORNING EXERCISE</a>
       </li>
-
+      <br>
       <h2>Day 6</h2>
       <li>
         <a href="https://docs.google.com/document/d/11weW9UrGU_MlAA7pSiyHmBNOz_VcDl78HyG1tpRJq_E/edit?usp=sharing" target="_blank">
@@ -77,6 +77,15 @@
         <a href="https://docs.google.com/document/d/1W5l2hnyZ8CGXwIAh5BccsJ80SjvosW3G3cYNcoT-v-s/edit?usp=sharing" target="_blank">
           Workshop the Sequel
         </a>
+      </li>
+      <li>
+        <a href="https://github.com/fizal619/watermelonrific" target="_blank"> Workshop the Sequel Solution ❗</a>
+      </li>
+      <li>
+        <a href="https://daneden.github.io/animate.css/" target="_blank">Animate.css</a>
+      </li>
+      <li>
+        <a href="https://docs.google.com/document/d/15Z2ioeNw4yi8UC9ev88C0i8MHyshyIFDtKGe6smza-4/edit?usp=sharing" target="_blank">Shared Group Norms</a>
       </li>
     </content>
 
