add morning exercise day 7

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="title">Class Links</h1>
   </header>
   <div class="container">
-    <content>
+    <main>
       <h2>Day 3 🎨</h2>
       <ul>
         <li>
@@ -87,7 +87,12 @@
       <li>
         <a href="https://docs.google.com/document/d/15Z2ioeNw4yi8UC9ev88C0i8MHyshyIFDtKGe6smza-4/edit?usp=sharing" target="_blank">Shared Group Norms</a>
       </li>
-    </content>
+      <br>
+      <h2>Day 7 🚀</h2>
+      <li>
+        <a href="https://docs.google.com/document/d/1fm5itdpWwLKTuLXiODxBTOAV9ALEAM_j3OMqUjKUtuY/edit?usp=sharing" target="_blank">Morning Exercise 🌌</a>
+      </li>
+    </main>
 
   </div>
   <div class="sidebar">
