--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
       <li>
         <a href="https://docs.google.com/document/d/1fm5itdpWwLKTuLXiODxBTOAV9ALEAM_j3OMqUjKUtuY/edit?usp=sharing" target="_blank">Morning Exercise 🌌</a>
       </li>
+      <li>
+        <a href="https://docs.google.com/document/d/1v7-EKKbSo_Jwdg7C4n4Wh77Nxzh9McdcWq6geAoJWhQ/edit?usp=sharing" target="_blank">WORKSHOP</a>
+      </li>
     </main>
 
   </div>
