update js script example

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
       <li>
         <a href="https://docs.google.com/document/d/1v7-EKKbSo_Jwdg7C4n4Wh77Nxzh9McdcWq6geAoJWhQ/edit?usp=sharing" target="_blank">WORKSHOP</a>
       </li>
+      <li>
+        <a href="https://github.com/fizal619/javascript-script-tag-example" target="_blank">JS Script Tag Example</a>
+      </li>
     </main>
 
   </div>
