--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
       <li>
         <a href="https://github.com/fizal619/javascript-script-tag-example" target="_blank">JS Script Tag Example</a>
       </li>
+      <li>
+        <a href="https://docs.google.com/document/d/10kx7h8o4C6Cxlsrruk3zRRFqyq2rloyD_-vcJZZb9VY/edit?usp=sharing" target="_blank">GIT REFERENCE GUIDE SIMPLE</a>
+      </li>
     </main>
 
   </div>
