free code camp js homework

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <a href="https://css-tricks.com" target="_blank">CSS Tricks</a> |
     <a href="https://nycda.instructure.com"  target="_blank">Canvas</a> |
     <a href="https://github.com/fizal619/yearup" target="_blank">Class Github</a>
+    <a href="https://www.codecademy.com/learn/introduction-to-javascript" target="_blank">HOMEWORK</a>
   </div>
 </body>
 </html>
