add day 8 morning exercise

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
       <li>
         <a href="https://www.codecademy.com/learn/introduction-to-javascript" target="_blank">HOMEWORK</a>
       </li>
+      <br>
+      <h2>Day 8 🎱</h2>
+      <li>
+        <a href="https://repl.it/@fizal619/MorningExerciseDay8?language=nodejs" target="_blank">MORNING EXERCISE</a>
+      </li>
     </main>
 
   </div>
