add day 8 notes

--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
       <li>
         <a href="https://repl.it/@fizal619/MorningExerciseDay8?language=nodejs" target="_blank">MORNING EXERCISE</a>
       </li>
+      <li>
+        <a href="https://github.com/amilajack/reading/blob/master/JavaScript/Javascript%20The%20Good%20Parts.pdf" target="_blank">JavaScript the Good Parts ✔</a>
+      </li>
+      <li>
+        <a href="https://github.com/amilajack/reading/tree/master/JavaScript" target="_blank">JavaScript Book Collection</a>
+      </li>
+      <li>
+        <a href="https://repl.it/@fizal619/FunctionsWorksheet" target="_blank">Functions Code</a>
+      </li>
     </main>
 
   </div>
