add day 8 notes

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
       <li>
         <a href="https://repl.it/@fizal619/FunctionsWorksheet" target="_blank">Functions Code</a>
       </li>
+      <li>
+        <a href="https://docs.google.com/document/d/1A_kcrjLtd5pzV9I7s09W4AUMNIlCM38YiZWT5Ebn-PI/edit?usp=sharing" target="_blank">WORKSHOP 🤙</a>
+      </li>
     </main>
 
   </div>
