add day 8 workshop solution

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
       <li>
         <a href="https://docs.google.com/document/d/1A_kcrjLtd5pzV9I7s09W4AUMNIlCM38YiZWT5Ebn-PI/edit?usp=sharing" target="_blank">WORKSHOP 🤙</a>
       </li>
+      <li>
+        <a href="https://github.com/fizal619/functions-javascript" target="_blank">Workshop Solution 😂</a>
+      </li>
     </main>
 
   </div>
