add day 8 workshop solution

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
       <li>
         <a href="https://github.com/fizal619/functions-javascript" target="_blank">Workshop Solution 😂</a>
       </li>
+      <li>
+        <a href="https://docs.google.com/document/d/1kBD6gDI2_RCRm6wUjQ9UMohaiICPtIvYeFPb4LSXvl8/edit?usp=sharing" target="_blank">WORKSHOP #2</a>
+      </li>
     </main>
 
   </div>
