Added details element

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </header>
   <div class="container">
     <main>
-      <h2>Day 3 🎨</h2>
+      <details>
+        <summary>Day 3 🎨</summary>
       <ul>
         <li>
           <a href="https://css-tricks.com/css-style-guides/" target="_blank">CSS Style Guides</a>
@@ -45,8 +46,10 @@
           <a href="https://blog.gyrosco.pe/" target="_blank">Gyrosco.pe Engineering Blog</a>
         </li>
       </ul>
+    </details>
       <br>
-      <h2>Day 4 🏓</h2>
+      <details>
+      <summary>Day 4 🏓</summary>
       <ul>
         <li>
           <a href="https://repl.it/@fizal619/MorningExerciseDay4" target="_blank">MORNING EXERCISE</a>
@@ -61,13 +64,18 @@
           <a href="https://docs.google.com/document/d/1skrssxn70cHZYcjir2qT4TUHxaEvW6I4e00KfiazYrs/edit?usp=sharing" target="_blank">WORKSHOP SOLUTION</a>
         </li>
       </ul>
+</details>
       <br>
-      <h2>Day 5</h2>
+        <details>
+      <summary>Day 5</summary>
       <li>
         <a href="https://repl.it/@fizal619/MorningExerciseDay5" target="_blank">MORNING EXERCISE</a>
       </li>
+    </details>
       <br>
-      <h2>Day 6</h2>
+      <details>
+      <summary>Day 6</summary>
+      <ul>
       <li>
         <a href="https://docs.google.com/document/d/11weW9UrGU_MlAA7pSiyHmBNOz_VcDl78HyG1tpRJq_E/edit?usp=sharing" target="_blank">
           Workshop
@@ -87,8 +95,12 @@
       <li>
         <a href="https://docs.google.com/document/d/15Z2ioeNw4yi8UC9ev88C0i8MHyshyIFDtKGe6smza-4/edit?usp=sharing" target="_blank">Shared Group Norms</a>
       </li>
+    </ul>
+  </details>
       <br>
-      <h2>Day 7 🚀</h2>
+      <details>
+      <summary>Day 7 🚀</summary>
+      <ul>
       <li>
         <a href="https://docs.google.com/document/d/1fm5itdpWwLKTuLXiODxBTOAV9ALEAM_j3OMqUjKUtuY/edit?usp=sharing" target="_blank">Morning Exercise 🌌</a>
       </li>
@@ -104,8 +116,12 @@
       <li>
         <a href="https://www.codecademy.com/learn/introduction-to-javascript" target="_blank">HOMEWORK</a>
       </li>
+    </ul>
+  </details>
       <br>
-      <h2>Day 8 🎱</h2>
+      <details>
+      <summary>Day 8 🎱</summary>
+      <ul>
       <li>
         <a href="https://repl.it/@fizal619/MorningExerciseDay8?language=nodejs" target="_blank">MORNING EXERCISE</a>
       </li>
@@ -127,6 +143,8 @@
       <li>
         <a href="https://docs.google.com/document/d/1kBD6gDI2_RCRm6wUjQ9UMohaiICPtIvYeFPb4LSXvl8/edit?usp=sharing" target="_blank">WORKSHOP #2</a>
       </li>
+    </ul>
+  </details>
     </main>
 
   </div>
