add class github link

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
       </li>
     </ul>
   </details>
+
+
     </main>
 
   </div>
@@ -154,7 +156,8 @@
     <a href="http://w3schools.com" target="_blank">W3 Schools</a> |
     <a href="https://css-tricks.com" target="_blank">CSS Tricks</a> |
     <a href="https://nycda.instructure.com"  target="_blank">Canvas</a> |
-    <a href="https://github.com/fizal619/yearup" target="_blank">Class Github</a>
+    <a href="https://github.com/fizal619/yearup" target="_blank">This Portal's Github</a>
+    <a href="https://github.com/fizal619/yearup-class-2018" target="_blank">CLASS GITHUB</a>
   </div>
 </body>
 </html>
