--- a/index.html
+++ b/index.html
@@ -145,7 +145,14 @@
       </li>
     </ul>
   </details>
-
+  <details>
+    <summary>Day 11</summary>
+    <ul>
+      <li>
+        <a href="https://docs.google.com/document/d/1wlDIlY7eGNel4kHGtJ6OGxHjkPUvAqMNbXI1r6EdV3Y/edit?usp=sharing">WORKSHOP</a>
+      </li>
+    </ul>
+  </details>
 
     </main>
 
