add day 11 items

--- a/index.html
+++ b/index.html
@@ -145,11 +145,30 @@
       </li>
     </ul>
   </details>
+  <br>
   <details>
     <summary>Day 11</summary>
     <ul>
       <li>
-        <a href="https://docs.google.com/document/d/1wlDIlY7eGNel4kHGtJ6OGxHjkPUvAqMNbXI1r6EdV3Y/edit?usp=sharing">WORKSHOP</a>
+        <a href="https://docs.google.com/document/d/1wlDIlY7eGNel4kHGtJ6OGxHjkPUvAqMNbXI1r6EdV3Y/edit?usp=sharing" target="_blank">WORKSHOP</a>
+      </li>
+      <li>
+        <a href="https://plainjs.com/javascript/events/" target="_blank">PlainJS</a>
+      </li>
+      <li>
+        <a href="https://repl.it/@fizal619/ClassObjectReference" target="_blank">Class/Object Reference</a>
+      </li>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/Events" target="_blank">MDN List of Valid Events</a>
+      </li>
+      <li>
+        <a href="https://www.w3schools.com/jsref/dom_obj_event.asp" target="_blank">W3Schools List of DOM Events</a>
+      </li>
+      <li>
+        <a href="https://mynameismatthieu.com/WOW/" target="_blank">Much Wow dot JS 🐶</a>
+      </li>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener" target="_blank">addEventListener Reference MDN</a>
       </li>
     </ul>
   </details>
