--- a/index.html
+++ b/index.html
@@ -14,167 +14,174 @@
     <main>
       <details>
         <summary>Day 3 🎨</summary>
-      <ul>
-        <li>
-          <a href="https://css-tricks.com/css-style-guides/" target="_blank">CSS Style Guides</a>
-        </li>
-        <li>
-          <a href="https://css-tricks.com/almanac/properties/b/background/" target="_blank">CSS Backgrounds</a>
-        </li>
-        <li>
-          <a href="https://www.rapidtables.com/web/css/css-color.html" target="_blank">CSS Color Constants</a>
-        </li>
-        <li>
-          <a href="https://docs.google.com/document/d/1GZ2wIzB582cDeG-m8yjGXk8Jw9-eBDiEjJd_A14d6zg/export?format=pdf">WORKSHOP 📄</a>
-        </li>
-        <li>
-          <a href="/yearup/day3workshop/">WORKSHOP SOLUTION ❗</a>
-        </li>
-        <li>
-          <a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">CSS Transitions</a>
-        </li>
-        <li>
-          <a href="https://css-tricks.com/snippets/css/keyframe-animation-syntax/" target="_blank">Keyframes Reference</a>
-        </li>
-        <li>
-          <a href="https://css-tricks.com/snippets/html/responsive-meta-tag/">Responsive Meta Tag</a>
-        </li>
-        <li>
-          <a href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp" target="_blank">Media Queries</a>
-        </li>
-        <li>
-          <a href="https://blog.gyrosco.pe/" target="_blank">Gyrosco.pe Engineering Blog</a>
-        </li>
-      </ul>
-    </details>
-      <br>
-      <details>
-      <summary>Day 4 🏓</summary>
-      <ul>
-        <li>
-          <a href="https://repl.it/@fizal619/MorningExerciseDay4" target="_blank">MORNING EXERCISE</a>
-        </li>
-        <li>
-          <a href="https://lingscars.com" target="_blank">Ling's Cars</a>
-        </li>
-        <li>
-          <a href="https://docs.google.com/document/d/1w7WqmEwWE82CwgzCxufgvB2UeHvc1VdX5cK5ZHNWBrY/edit?usp=sharing">WORKSHOP</a>
-        </li>
-        <li>
-          <a href="https://docs.google.com/document/d/1skrssxn70cHZYcjir2qT4TUHxaEvW6I4e00KfiazYrs/edit?usp=sharing" target="_blank">WORKSHOP SOLUTION</a>
-        </li>
-      </ul>
-</details>
-      <br>
+        <ul>
+          <li>
+            <a href="https://css-tricks.com/css-style-guides/" target="_blank">CSS Style Guides</a>
+          </li>
+          <li>
+            <a href="https://css-tricks.com/almanac/properties/b/background/" target="_blank">CSS Backgrounds</a>
+          </li>
+          <li>
+            <a href="https://www.rapidtables.com/web/css/css-color.html" target="_blank">CSS Color Constants</a>
+          </li>
+          <li>
+            <a href="https://docs.google.com/document/d/1GZ2wIzB582cDeG-m8yjGXk8Jw9-eBDiEjJd_A14d6zg/export?format=pdf">WORKSHOP 📄</a>
+          </li>
+          <li>
+            <a href="/yearup/day3workshop/">WORKSHOP SOLUTION ❗</a>
+          </li>
+          <li>
+            <a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">CSS Transitions</a>
+          </li>
+          <li>
+            <a href="https://css-tricks.com/snippets/css/keyframe-animation-syntax/" target="_blank">Keyframes Reference</a>
+          </li>
+          <li>
+            <a href="https://css-tricks.com/snippets/html/responsive-meta-tag/">Responsive Meta Tag</a>
+          </li>
+          <li>
+            <a href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp" target="_blank">Media Queries</a>
+          </li>
+          <li>
+            <a href="https://blog.gyrosco.pe/" target="_blank">Gyrosco.pe Engineering Blog</a>
+          </li>
+        </ul>
+      </details>
+        <br>
         <details>
-      <summary>Day 5</summary>
-      <li>
-        <a href="https://repl.it/@fizal619/MorningExerciseDay5" target="_blank">MORNING EXERCISE</a>
-      </li>
+        <summary>Day 4 🏓</summary>
+        <ul>
+          <li>
+            <a href="https://repl.it/@fizal619/MorningExerciseDay4" target="_blank">MORNING EXERCISE</a>
+          </li>
+          <li>
+            <a href="https://lingscars.com" target="_blank">Ling's Cars</a>
+          </li>
+          <li>
+            <a href="https://docs.google.com/document/d/1w7WqmEwWE82CwgzCxufgvB2UeHvc1VdX5cK5ZHNWBrY/edit?usp=sharing">WORKSHOP</a>
+          </li>
+          <li>
+            <a href="https://docs.google.com/document/d/1skrssxn70cHZYcjir2qT4TUHxaEvW6I4e00KfiazYrs/edit?usp=sharing" target="_blank">WORKSHOP SOLUTION</a>
+          </li>
+        </ul>
+  </details>
+        <br>
+          <details>
+        <summary>Day 5</summary>
+        <li>
+          <a href="https://repl.it/@fizal619/MorningExerciseDay5" target="_blank">MORNING EXERCISE</a>
+        </li>
+      </details>
+        <br>
+        <details>
+        <summary>Day 6</summary>
+        <ul>
+        <li>
+          <a href="https://docs.google.com/document/d/11weW9UrGU_MlAA7pSiyHmBNOz_VcDl78HyG1tpRJq_E/edit?usp=sharing" target="_blank">
+            Workshop
+          </a>
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1W5l2hnyZ8CGXwIAh5BccsJ80SjvosW3G3cYNcoT-v-s/edit?usp=sharing" target="_blank">
+            Workshop the Sequel
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/fizal619/watermelonrific" target="_blank"> Workshop the Sequel Solution ❗</a>
+        </li>
+        <li>
+          <a href="https://daneden.github.io/animate.css/" target="_blank">Animate.css</a>
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/15Z2ioeNw4yi8UC9ev88C0i8MHyshyIFDtKGe6smza-4/edit?usp=sharing" target="_blank">Shared Group Norms</a>
+        </li>
+      </ul>
     </details>
-      <br>
-      <details>
-      <summary>Day 6</summary>
+        <br>
+        <details>
+        <summary>Day 7 🚀</summary>
+        <ul>
+        <li>
+          <a href="https://docs.google.com/document/d/1fm5itdpWwLKTuLXiODxBTOAV9ALEAM_j3OMqUjKUtuY/edit?usp=sharing" target="_blank">Morning Exercise 🌌</a>
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1v7-EKKbSo_Jwdg7C4n4Wh77Nxzh9McdcWq6geAoJWhQ/edit?usp=sharing" target="_blank">WORKSHOP</a>
+        </li>
+        <li>
+          <a href="https://github.com/fizal619/javascript-script-tag-example" target="_blank">JS Script Tag Example</a>
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/10kx7h8o4C6Cxlsrruk3zRRFqyq2rloyD_-vcJZZb9VY/edit?usp=sharing" target="_blank">GIT REFERENCE GUIDE SIMPLE</a>
+        </li>
+        <li>
+          <a href="https://www.codecademy.com/learn/introduction-to-javascript" target="_blank">HOMEWORK</a>
+        </li>
+      </ul>
+    </details>
+        <br>
+        <details>
+        <summary>Day 8 🎱</summary>
+        <ul>
+        <li>
+          <a href="https://repl.it/@fizal619/MorningExerciseDay8?language=nodejs" target="_blank">MORNING EXERCISE</a>
+        </li>
+        <li>
+          <a href="https://github.com/amilajack/reading/blob/master/JavaScript/Javascript%20The%20Good%20Parts.pdf" target="_blank">JavaScript the Good Parts ✔</a>
+        </li>
+        <li>
+          <a href="https://github.com/amilajack/reading/tree/master/JavaScript" target="_blank">JavaScript Book Collection</a>
+        </li>
+        <li>
+          <a href="https://repl.it/@fizal619/FunctionsWorksheet" target="_blank">Functions Code</a>
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1A_kcrjLtd5pzV9I7s09W4AUMNIlCM38YiZWT5Ebn-PI/edit?usp=sharing" target="_blank">WORKSHOP 🤙</a>
+        </li>
+        <li>
+          <a href="https://github.com/fizal619/functions-javascript" target="_blank">Workshop Solution 😂</a>
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1kBD6gDI2_RCRm6wUjQ9UMohaiICPtIvYeFPb4LSXvl8/edit?usp=sharing" target="_blank">WORKSHOP #2</a>
+        </li>
+      </ul>
+    </details>
+    <br>
+    <details>
+      <summary>Day 11</summary>
       <ul>
-      <li>
-        <a href="https://docs.google.com/document/d/11weW9UrGU_MlAA7pSiyHmBNOz_VcDl78HyG1tpRJq_E/edit?usp=sharing" target="_blank">
-          Workshop
-        </a>
-      </li>
-      <li>
-        <a href="https://docs.google.com/document/d/1W5l2hnyZ8CGXwIAh5BccsJ80SjvosW3G3cYNcoT-v-s/edit?usp=sharing" target="_blank">
-          Workshop the Sequel
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/fizal619/watermelonrific" target="_blank"> Workshop the Sequel Solution ❗</a>
-      </li>
-      <li>
-        <a href="https://daneden.github.io/animate.css/" target="_blank">Animate.css</a>
-      </li>
-      <li>
-        <a href="https://docs.google.com/document/d/15Z2ioeNw4yi8UC9ev88C0i8MHyshyIFDtKGe6smza-4/edit?usp=sharing" target="_blank">Shared Group Norms</a>
-      </li>
-    </ul>
-  </details>
-      <br>
-      <details>
-      <summary>Day 7 🚀</summary>
+        <li>
+          <a href="https://docs.google.com/document/d/1wlDIlY7eGNel4kHGtJ6OGxHjkPUvAqMNbXI1r6EdV3Y/edit?usp=sharing" target="_blank">WORKSHOP</a>
+        </li>
+        <li>
+          <a href="https://plainjs.com/javascript/events/" target="_blank">PlainJS</a>
+        </li>
+        <li>
+          <a href="https://repl.it/@fizal619/ClassObjectReference" target="_blank">Class/Object Reference</a>
+        </li>
+        <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/Events" target="_blank">MDN List of Valid Events</a>
+        </li>
+        <li>
+          <a href="https://www.w3schools.com/jsref/dom_obj_event.asp" target="_blank">W3Schools List of DOM Events</a>
+        </li>
+        <li>
+          <a href="https://mynameismatthieu.com/WOW/" target="_blank">Much Wow dot JS 🐶</a>
+        </li>
+        <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener" target="_blank">addEventListener Reference MDN</a>
+        </li>
+      </ul>
+    </details>
+    <br>
+    <details>
+      <summary>Day 12 🍕</summary>
       <ul>
-      <li>
-        <a href="https://docs.google.com/document/d/1fm5itdpWwLKTuLXiODxBTOAV9ALEAM_j3OMqUjKUtuY/edit?usp=sharing" target="_blank">Morning Exercise 🌌</a>
-      </li>
-      <li>
-        <a href="https://docs.google.com/document/d/1v7-EKKbSo_Jwdg7C4n4Wh77Nxzh9McdcWq6geAoJWhQ/edit?usp=sharing" target="_blank">WORKSHOP</a>
-      </li>
-      <li>
-        <a href="https://github.com/fizal619/javascript-script-tag-example" target="_blank">JS Script Tag Example</a>
-      </li>
-      <li>
-        <a href="https://docs.google.com/document/d/10kx7h8o4C6Cxlsrruk3zRRFqyq2rloyD_-vcJZZb9VY/edit?usp=sharing" target="_blank">GIT REFERENCE GUIDE SIMPLE</a>
-      </li>
-      <li>
-        <a href="https://www.codecademy.com/learn/introduction-to-javascript" target="_blank">HOMEWORK</a>
-      </li>
-    </ul>
-  </details>
-      <br>
-      <details>
-      <summary>Day 8 🎱</summary>
-      <ul>
-      <li>
-        <a href="https://repl.it/@fizal619/MorningExerciseDay8?language=nodejs" target="_blank">MORNING EXERCISE</a>
-      </li>
-      <li>
-        <a href="https://github.com/amilajack/reading/blob/master/JavaScript/Javascript%20The%20Good%20Parts.pdf" target="_blank">JavaScript the Good Parts ✔</a>
-      </li>
-      <li>
-        <a href="https://github.com/amilajack/reading/tree/master/JavaScript" target="_blank">JavaScript Book Collection</a>
-      </li>
-      <li>
-        <a href="https://repl.it/@fizal619/FunctionsWorksheet" target="_blank">Functions Code</a>
-      </li>
-      <li>
-        <a href="https://docs.google.com/document/d/1A_kcrjLtd5pzV9I7s09W4AUMNIlCM38YiZWT5Ebn-PI/edit?usp=sharing" target="_blank">WORKSHOP 🤙</a>
-      </li>
-      <li>
-        <a href="https://github.com/fizal619/functions-javascript" target="_blank">Workshop Solution 😂</a>
-      </li>
-      <li>
-        <a href="https://docs.google.com/document/d/1kBD6gDI2_RCRm6wUjQ9UMohaiICPtIvYeFPb4LSXvl8/edit?usp=sharing" target="_blank">WORKSHOP #2</a>
-      </li>
-    </ul>
-  </details>
-  <br>
-  <details>
-    <summary>Day 11</summary>
-    <ul>
-      <li>
-        <a href="https://docs.google.com/document/d/1wlDIlY7eGNel4kHGtJ6OGxHjkPUvAqMNbXI1r6EdV3Y/edit?usp=sharing" target="_blank">WORKSHOP</a>
-      </li>
-      <li>
-        <a href="https://plainjs.com/javascript/events/" target="_blank">PlainJS</a>
-      </li>
-      <li>
-        <a href="https://repl.it/@fizal619/ClassObjectReference" target="_blank">Class/Object Reference</a>
-      </li>
-      <li>
-        <a href="https://developer.mozilla.org/en-US/docs/Web/Events" target="_blank">MDN List of Valid Events</a>
-      </li>
-      <li>
-        <a href="https://www.w3schools.com/jsref/dom_obj_event.asp" target="_blank">W3Schools List of DOM Events</a>
-      </li>
-      <li>
-        <a href="https://mynameismatthieu.com/WOW/" target="_blank">Much Wow dot JS 🐶</a>
-      </li>
-      <li>
-        <a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener" target="_blank">addEventListener Reference MDN</a>
-      </li>
-    </ul>
-  </details>
-
-    </main>
-
+        <li>
+          <a href="https://docs.google.com/document/d/1WWWBpPBYkpd4vFnxVilYJiw8zrPa9-V2ybb-QPBpWHk/edit?usp=sharing" target="_blank">Project</a>
+        </li>
+      </ul>
+    </details>
+  </main>
   </div>
   <div class="sidebar">
     <h3>Other Useful Links:</h3>
