--- a/index.html
+++ b/index.html
@@ -182,6 +182,15 @@
       </ul>
     </details>
   </main>
+  <details>
+    <summary>Day 13 🍔</summary>
+    <ul>
+      <li>
+        <a href="https://repl.it/@fizal619/rockpaperscissors" target="_blank">Morning Exercise</a>
+      </li>
+    </ul>
+
+  </details>
   </div>
   <div class="sidebar">
     <h3>Other Useful Links:</h3>
