--- a/index.html
+++ b/index.html
@@ -191,6 +191,15 @@
     </ul>
 
   </details>
+  <details>
+    <summary>Day 14 🏠🏡</summary>
+    <ul>
+      <li>
+        <a href="https://repl.it/@fizal619/ClassObjectExample" target="_blank">Classes and Objects Example</a>
+      </li>
+    </ul>
+  </details>
+
   </div>
   <div class="sidebar">
     <h3>Other Useful Links:</h3>
