--- a/index.html
+++ b/index.html
@@ -214,7 +214,18 @@
             <p>Refer to email sent on 11/11.</p>
           </details>
       </details>
-
+      <br>
+      <details>
+        <summary>Day 17</summary>
+        <ul>
+          <li>
+            <a href="https://repl.it/@fizal619/axios-example" target="_blank">Axios Example</a>
+          </li>
+          <li>
+            <a href="https://github.com/axios/axios" target="_blank">Axios's Docs</a>
+          </li>
+        </ul>
+      </details>
     </main>
   </div>
   <div class="sidebar">
