--- a/index.html
+++ b/index.html
@@ -226,6 +226,18 @@
           </li>
         </ul>
       </details>
+      <br>
+      <details>
+        <summary>Day 18 🔥</summary>
+        <ul>
+          <li>
+            <a href="https://repl.it/@fizal619/OMDBAPI-EXAMPLE" target="_blank">OMDB API EXAMPLE</a>
+          </li>
+          <li>
+            <a href="https://github.com/fizal619/yearup-class-2018/tree/master/w04/d2/workshop_solution" target="_blank">Object Oriented Solution to the Redbull Workshop</a>
+          </li>
+        </ul>
+      </details>
     </main>
   </div>
   <div class="sidebar">
