add morning exercise

--- a/index.html
+++ b/index.html
@@ -238,6 +238,15 @@
           </li>
         </ul>
       </details>
+      <br>
+      <details>
+        <summary> Day 21 🍉</summary>
+        <ul>
+          <li>
+            <a href="https://github.com/fizal619/yearup-class-2018/tree/master/w05/d2/morning_exercise" target="_blank">Morning Exercise</a>
+          </li>
+        </ul>
+      </details>
     </main>
   </div>
   <div class="sidebar">
