add pathing fix

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <a href="https://github.com/fizal619/yearup-class-2018/tree/master/w05/d2/morning_exercise" target="_blank">Morning Exercise</a>
           </li>
           <li>
-            <a href="/githubpages.mp4" target="_blank">How to deploy to github pages. 🎥</a>
+            <a href="githubpages.mp4" target="_blank">How to deploy to github pages. 🎥</a>
           </li>
         </ul>
       </details>
