--- a/index.html
+++ b/index.html
@@ -269,6 +269,11 @@
     <a href="https://nycda.instructure.com"  target="_blank">Canvas</a> |
     <a href="https://github.com/fizal619/yearup" target="_blank">This Portal's Github</a> |
     <a href="https://github.com/fizal619/yearup-class-2018" target="_blank">CLASS GITHUB</a>
+    <br><br>
+    <h3>GONG NOISE</h3>
+    <br>
+    <audio src="gong.mp3" controls></audio>
+    <br>
   </div>
 </body>
 </html>
