add ruby syntax

--- a/index.html
+++ b/index.html
@@ -259,6 +259,13 @@
           </li>
         </ul>
       </details>
+      <br>
+      <details>
+        <summary>Day 25 💎</summary>
+        <li>
+          <a href="https://ruby.github.io/TryRuby/" target="_blank">30 minute tutorial on ruby syntax ❗❗❗❗</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
