--- a/index.html
+++ b/index.html
@@ -265,6 +265,9 @@
         <li>
           <a href="https://ruby.github.io/TryRuby/" target="_blank">30 minute tutorial on ruby syntax ❗❗❗❗</a>
         </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1EUsQganrN5GVTI1Yl-tL2m7cKdJQeTFwutn2E1RIiko/edit#" target="_blank">Workshop ⚡</a>
+        </li>
       </details>
     </main>
   </div>
