--- a/index.html
+++ b/index.html
@@ -268,6 +268,9 @@
         <li>
           <a href="https://docs.google.com/document/d/1EUsQganrN5GVTI1Yl-tL2m7cKdJQeTFwutn2E1RIiko/edit#" target="_blank">Workshop ⚡</a>
         </li>
+        <li>
+          <a href="https://repl.it/@fizal619/day25RubyStuff" target="_blank">RUBY EXAMLES</a>
+        </li>
       </details>
     </main>
   </div>
