--- a/index.html
+++ b/index.html
@@ -269,7 +269,19 @@
           <a href="https://docs.google.com/document/d/1EUsQganrN5GVTI1Yl-tL2m7cKdJQeTFwutn2E1RIiko/edit#" target="_blank">Workshop ⚡</a>
         </li>
         <li>
-          <a href="https://repl.it/@fizal619/day25RubyStuff" target="_blank">RUBY EXAMLES</a>
+          <a href="https://repl.it/@fizal619/day25RubyStuff" target="_blank">RUBY EXAMPLES</a>
+        </li>
+        <li>
+          <a href="https://repl.it/@fizal619/WoozyJudiciousLanguage">Counting letters with a Hash</a>
+        </li>
+        <li>
+          <a href="https://repl.it/@knixon000/First-Ruby-Workshop">Kendra's Solution #1</a>
+        </li>
+        <li>
+          <a href="https://repl.it/@Uddinkamran/Ruby-looping?language=ruby">Kamran's Solution #2</a>
+        </li>
+        <li>
+          <a href="https://repl.it/@Kyudeci/HandsomeFunctionalTypes">Shakiem's Solution #3</a>
         </li>
       </details>
     </main>
