--- a/index.html
+++ b/index.html
@@ -284,6 +284,16 @@
           <a href="https://repl.it/@Kyudeci/HandsomeFunctionalTypes">Shakiem's Solution #3</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 26</summary>
+        <li>
+          <a href="https://repl.it/@fizal619/LoneCheapVendor?language=ruby">CLASS CODE</a>
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1mKhmhMv7TVrcY3sdT--Dia4N5TloenWz3OBdyrUK8XU/edit?usp=sharing">WORKSHOP: EMOTE CLASS</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
