added day 27 forecast.io github page

--- a/index.html
+++ b/index.html
@@ -294,6 +294,13 @@
           <a href="https://docs.google.com/document/d/1mKhmhMv7TVrcY3sdT--Dia4N5TloenWz3OBdyrUK8XU/edit?usp=sharing">WORKSHOP: EMOTE CLASS</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 27</summary>
+        <li>
+          <a href="https://github.com/darkskyapp/forecast-ruby">DARKSKY</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
