--- a/index.html
+++ b/index.html
@@ -300,6 +300,12 @@
         <li>
           <a href="https://github.com/darkskyapp/forecast-ruby">DARKSKY</a>
         </li>
+        <li>
+          <a href="https://docs.google.com/document/d/10f4NZS0ph9j0O315mWlCenTGxPb8JmCb5yRIxILpH-I/edit?usp=sharing">WORKSHOP</a>
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1_KejXiBMBsPqB3FDe0_L67cMXcHIzuhyXtyKfJSfzEU/edit?usp=sharing">FIX GEM INSTALLATION ERRORS</a>
+        </li>
       </details>
     </main>
   </div>
