--- a/index.html
+++ b/index.html
@@ -306,6 +306,9 @@
         <li>
           <a href="https://docs.google.com/document/d/1gcff6mx7_a125bSg6z7DsjRGhao_b0RvULXCTb9v0dI/edit?usp=sharing">FIX GEM INSTALLATION ERRORS</a>
         </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1v55NOTitszJMkRP4nn8J8CuKtBADoTYdZIRi5ARq5pg/edit?usp=sharing">CLASS CODE</a>
+        </li>
       </details>
     </main>
   </div>
