--- a/index.html
+++ b/index.html
@@ -310,6 +310,13 @@
           <a href="https://docs.google.com/document/d/1v55NOTitszJMkRP4nn8J8CuKtBADoTYdZIRi5ARq5pg/edit?usp=sharing">CLASS CODE</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 28</summary>
+        <li>
+          <a href="https://docs.google.com/document/d/1p1NV_wyedl5ulN1yAuNQhBEOxD1pTLPxxeDBm0MS804/edit?usp=sharing">Workshop</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
