--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
         <li>
           <a href="https://docs.google.com/document/d/1p1NV_wyedl5ulN1yAuNQhBEOxD1pTLPxxeDBm0MS804/edit?usp=sharing">Workshop</a>
         </li>
+        <li>
+          <a href="https://repl.it/@fizal619/Hashes-and-Arrays?language=ruby" target="_blank">Class Code and Examples</a>
+        </li>
       </details>
     </main>
   </div>
