--- a/index.html
+++ b/index.html
@@ -319,6 +319,12 @@
         <li>
           <a href="https://repl.it/@fizal619/Hashes-and-Arrays?language=ruby" target="_blank">Class Code and Examples</a>
         </li>
+        <li>
+          <a href="https://repl.it/@fizal619/CountCharactersHash" target="_blank">Hash Character Counter</a>
+        </li>
+        <li>
+          <a href="https://repl.it/@fizal619/ImaginaryLittleQueue" target="_blank">HelpQueue</a>
+        </li>
       </details>
     </main>
   </div>
