--- a/index.html
+++ b/index.html
@@ -326,6 +326,13 @@
           <a href="https://repl.it/@fizal619/ImaginaryLittleQueue" target="_blank">HelpQueue</a>
         </li>
       </details>
+      <br>
+      <details>
+        <summary>Day 29 🔎</summary>
+        <li>
+          <a href="https://repl.it/@fizal619/MorningExerciseDay29">Morning Exercise ☀</a>
+        </li>
+      </details>
     </main>
   </div>
   <div class="sidebar">
