--- a/index.html
+++ b/index.html
@@ -331,6 +331,16 @@
         <summary>Day 29 🔎</summary>
         <li>
           <a href="https://repl.it/@fizal619/MorningExerciseDay29">Morning Exercise ☀</a>
+          <a href="https://repl.it/@fizal619/FocusedSardonicSolution" target="_blank">Pig Latin Solution</a>
+          <a href="https://repl.it/@fizal619/SomeKindOfBubbleSort" target="_blank">Some Kind of Bubble Sort</a>
+        </li>
+      </details>
+      <br>
+      <details>
+        <summary>Day 30</summary>
+        <li>
+          <a href="https://repl.it/@fizal619/ImpracticalNearCron" target="_blank">Morning Exercise</a>
+          <a href="" target="_blank"></a>
         </li>
       </details>
     </main>
